Read both Stdout and Stderr from PBS commands